<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menuDumpEditorSave"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_save"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menuDumpEditorShare"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menuDumpEditorAscii"
        android:title="@string/action_data_as_ascii" />
    <item android:id="@+id/menuDumpEditorAccessConditions"
        android:title="@string/action_decode_ac" />
    <item android:id="@+id/menuDumpEditorValueBlocksAsInt"
        android:title="@string/action_show_value_blocks_as_int" />
    <item android:id="@+id/menuDumpEditorDecodeDateOfManuf"
        android:title="@string/action_decode_manuf_date" />
    <item android:id="@+id/menuDumpEditorDiffDump"
        android:title="@string/action_compare_dump" />
    <item android:id="@+id/menuDumpEditorWriteDump"
        android:title="@string/action_write_dump" />
    <item android:id="@+id/menuDumpEditorSaveKeys"
          android:title="@string/action_save_keys" />
    <item android:id="@+id/menuDumpEditorOpenValueBlockTool"
        android:title="@string/action_show_vb_tool" />
    <item android:id="@+id/menuDumpEditorOpenAccessConditionTool"
        android:title="@string/action_show_ac_tool" />
    <item android:id="@+id/menuDumpEditorOpenBccTool"
          android:title="@string/action_show_bcc_tool" />
</menu>
