<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutWriteSectors"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textViewWriteSectorsMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/dialog_write_sectors"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Separator -->
    <View
        android:id="@+id/viewWriteSectors"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/textViewWriteSectorsMessage"
        android:layout_margin="10dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/linearLayoutWriteSectorsButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewWriteSectors" >

        <Button
            android:id="@+id/buttonWriteSectorsSelectAll"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="34dip"
            android:tag="all"
            android:text="@string/action_select_all" />

        <Button
            android:id="@+id/buttonWriteSectorsSelectNone"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="34dip"
            android:tag="none"
            android:text="@string/action_select_none" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewWriteSectors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayoutWriteSectorsButtons" >

        <LinearLayout
            android:id="@+id/linearLayoutWriteSectorsCheckBoxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</RelativeLayout>